...
        android:id="@+id/search"
        android:enabled="true"
        android:icon="@drawable/ic_search"
        android:title="Search"
        />
    <item
        android:id="@+id/addTask"
        android:enabled="true"
        android:icon="@drawable/ic_add"
        android:title="Add Task"
        />

    <item
        android:id="@+id/profile"
        android:enabled="true"
        android:icon="@drawable/ic_profile"
        android:title="Profile"
        />
    <item
        android:id="@+id/logout"
        android:enabled="true"
        android:icon="@drawable/ic_stat_name"
        android:title="Log Out"
        />


...
