...
            android:layout_height="123dp"
            android:contentDescription="Board"
            android:layout_marginTop="60dp"
            app:srcCompat="@drawable/logo_main" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:padding="10dp"
            android:hint="Email"
...
            android:textColorHint="@android:color/white"
            android:textColor="@android:color/white"
            android:inputType="textPersonName"
            />

        <EditText
            android:id="@+id/editTextpassword"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            android:hint="Password"
...
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:inputType="textPassword"
            />

        <Button
            android:id="@+id/buttonlogin"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/white_rounded_button"
            android:padding="10dp"
...
