<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/secondcolor"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/colorWhite"
                android:layout_marginTop="8dp"
                android:text="@string/create_task_title"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/task_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:ems="10"
                android:hint="@string/task_title_hint"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/task_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:ems="10"
                android:hint="@string/task_description_hint"
                android:inputType="textMultiLine" />

            <Button
                android:id="@+id/set_location_button"
                android:layout_width="236dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/white_rounded_button"
                android:layout_marginTop="8dp"
                android:text="@string/set_location" />

            <TextView
                android:id="@+id/date_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:padding="12dp"
                android:text="@string/date_hint"
                android:textSize="18sp" />



            <android.support.constraint.ConstraintLayout
                android:id="@+id/photo_display"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/display_recycler"
                    android:layout_width="311dp"
                    android:layout_height="132dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/camera_button"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <ImageButton
                    android:id="@+id/camera_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@android:drawable/ic_menu_camera"
                    android:backgroundTint="@color/wallet_holo_blue_light"
                    android:contentDescription="@string/camera_button_desc" />

                <ImageButton
                    android:id="@+id/gallery_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/camera_button"
                    app:srcCompat="@android:drawable/ic_menu_gallery"
                    android:backgroundTint="@color/wallet_holo_blue_light"
                    android:contentDescription="@string/gallery_button_desc" />
            </android.support.constraint.ConstraintLayout>

            <Button
                android:id="@+id/post_task_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/white_rounded_button"
                android:layout_marginBottom="24dp"
                android:text="@string/post_task" />
        </LinearLayout>
    </ScrollView>


</RelativeLayout>