<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/my_info"
        android:enabled="true"
        android:icon="@drawable/ic_profile"
        android:title="Profile"
        />

    <item
        android:id="@+id/messages"
        android:enabled="true"
        android:icon="@drawable/ic_messages"
        android:title="Messages"
        />

    <item
        android:id="@+id/requested_task"
        android:enabled="true"
        android:icon="@drawable/ic_list"
        android:title="Requested"
        />

    <item
        android:id="@+id/assigned_task"
        android:enabled="true"
        android:icon="@drawable/ic_list"
        android:title="Assigned"
        />
    <item
        android:id="@+id/bidded_task"
        android:enabled="true"
        android:icon="@drawable/ic_list"
        android:title="Bids"
        />
</menu>